clusters/titania/apps/homer/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: homer
    app.kubernetes.io/name: homer
  name: homer
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: homer
      app.kubernetes.io/name: homer
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: homer
        app.kubernetes.io/name: homer
    spec:
      containers:
      - image: kmjayadeep/homer:v23.02.2-corsfix
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        name: homer
        volumeMounts:
        - name: homer-assets
          mountPath: /www/assets
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
        securityContext:
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 0
          periodSeconds: 5
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
      volumes:
      - name: homer-assets
        configMap:
          name: homer-assets
