clusters/titania/apps/homer/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: homer
    app.kubernetes.io/name: homer
    app.kubernetes.io/service: homer
  name: homer
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: homer
    app.kubernetes.io/name: homer
  type: ClusterIP
