clusters/titania/apps/homer/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: homer
    app.kubernetes.io/name: homer
  annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
  name: homer-ingress
spec:
  tls:
  - hosts:
    - home.cosmos.cboxlab.com
    secretName: homer-cert
  rules:
  - host: home.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homer
            port:
              name: http
